# cmetrics

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: build.yaml  lint.yaml  packages.yaml
benchmarks/: README.md  benchmark.c  run-perf.sh
cmake/: libraries.cmake
docs/: label-value-handling.md
include/cmetrics/: cmetrics.h  cmt_array.h  cmt_cat.h  cmt_compat.h  cmt_counter.h  cmt_decode_msgpack.h  cmt_decode_opentelemetry.h  cmt_decode_prometheus.h  cmt_decode_prometheus_remote_write.h  cmt_encode_cloudwatch_emf_payload.h  cmt_encode_msgpack.h  cmt_encode_opentelemetry.h  cmt_encode_prometheus.h  cmt_encode_prometheus_remote_write.h  cmt_encode_prometheus_write_request.h  cmt_encode_text.h  cmt_filter.h  cmt_format_prometheus.h  cmt_gauge.h  cmt_histogram.h  cmt_log.h  cmt_map.h  cmt_math.h  cmt_metric.h  cmt_mpack_utils.h  cmt_opts.h  cmt_sds.h  cmt_time.h  cmt_variant_utils.h  cmt_version.h
include/protobuf-c/: remote.pb-c.h.old  types.pb-c.h.old
lib/snappy/: CMakeLists.txt
lib/snappy/src/: Makefile  libsnappyc.so.1  scmd  sgverify  verify
scripts/: win_build.bat
src/: CMakeLists.txt  cmetrics.c  cmt_array.c  cmt_atomic_generic.c  cmt_atomic_msvc.c  cmt_cat.c  cmt_counter.c  cmt_decode_msgpack.c  cmt_decode_opentelemetry.c  cmt_decode_prometheus.c  cmt_decode_prometheus.l  cmt_decode_prometheus.y  cmt_decode_prometheus_remote_write.c  cmt_decode_statsd.c  cmt_encode_cloudwatch_emf_payload.c  cmt_encode_influx.c  cmt_encode_msgpack.c  cmt_encode_opentelemetry.c  cmt_encode_prometheus.c  cmt_encode_prometheus_remote_write.c  cmt_encode_prometheus_write_request.c  cmt_encode_splunk_hec.c  cmt_encode_text.c  cmt_filter.c  cmt_format_prometheus.c  cmt_gauge.c  cmt_histogram.c  cmt_label.c  cmt_log.c  cmt_map.c  cmt_metric.c  cmt_mpack_utils.c  cmt_opts.c  cmt_summary.c  cmt_time.c  cmt_untyped.c  cmt_validate_msgpack.c  main.c  remote.pb-c.c  types.pb-c.c.old
tests/: CMakeLists.txt  atomic_operations.c  cat.c  cmt_tests.h  counter.c  decoding.c  encode_output.c  encoding.c  encoding.c.orig  exp_histogram.c  expire.c  filter.c  gauge.c  histogram.c  issues.c  msgpack_abi.c  null_label.c  opentelemetry.c  prometheus_lexer.c  prometheus_parser.c  summary.c
tests/data/: issue_fluent_bit_5894.txt
